--- a/vagrant/itemCatalog/templates/menu.html
+++ b/vagrant/itemCatalog/templates/menu.html
@@ -2,37 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css' }}"
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
     <title>{{ restaurant.name }}</title>
 </head>
 <body>
 <h1>{{ restaurant.name }}</h1>
 
-{% with messages = get_flashed_messages() %}
-    {% if messages %}
-        <ul>
-            {% for message in messages %}
-                <li><strong>{{ message }}</strong></li>
-            {% endfor %}
-        </ul>
-    {% endif %}
-{% endwith %}
+
+<div class="flash">
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <ul>
+                {% for message in messages %}
+                    <li><strong>{{ message }}</strong></li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}
+</div>
 
 <a href="{{ url_for('newMenuItem', restaurant_id=restaurant.id) }}">Add New Item</a>
-<br>
-<br>
-{% for i in items %}
-    {{ i.name }}
-    </br>
-
-    {{ i.description }}
-    </br>
-    {{ i.price }}
-    </br>
-    <a href="{{ url_for('editMenuItem', menu_id=i.id, restaurant_id=restaurant.id) }}">edit</a>
-    <a href="{{ url_for('deleteMenuItem', menu_id=i.id, restaurant_id=restaurant.id) }}">delete</a>
-    </br>
-    </br>
-{% endfor %}
+<div class="pane">
+    <br>
+    <br>
+    {% for i in items %}
+        <span class="name"><p>{{ i.name }}</p></span>
+        </br>
+        <div class="description">
+            <p>{{ i.description }}</p>
+        </div>
+        </br>
+        <span class="price"><p>{{ i.price }}</p></span>
+        </br>
+        <div class="editdeletepane">
+            <a href="{{ url_for('editMenuItem', menu_id=i.id, restaurant_id=restaurant.id) }}">edit</a>
+            <a href="{{ url_for('deleteMenuItem', menu_id=i.id, restaurant_id=restaurant.id) }}">delete</a>
+        </div>
+        </br>
+        </br>
+    {% endfor %}
+</div>
 </body>
 </html>
