--- a/vagrant/itemCatalog/templates/menu_list.html
+++ b/vagrant/itemCatalog/templates/menu_list.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Restaurant Menu</title>
+    <title>Menu list</title>
 </head>
 <body>
-    <h1>Restaurant List</h1>
+<h1>Menu List</h1>
 </body>
 </html>
