--- a/vagrant/itemCatalog/templates/restaurants_list.html
+++ b/vagrant/itemCatalog/templates/restaurants_list.html
@@ -28,7 +28,8 @@
   <div class="container">
     {% for r in restaurants %}
       <div class="row">
-          <div class="col-md-6"><a href="{{ url_for('menu', restaurant_id=r.id) }}">{{r.name}}</a>
+          <div class="col-md-6">
+              <a  href="{{ url_for('menu', restaurant_id=r.id) }}">{{r.name}}</a>
               <a href="{{ url_for('edit_restaurant', restaurant_id=r.id) }}" class="fa fa-pencil-square-o" aria-hidden="true"></a>
           </div>
       </div>
