--- a/vagrant/itemCatalog/templates/menu_list.html
+++ b/vagrant/itemCatalog/templates/menu_list.html
@@ -21,15 +21,16 @@
 
   <div class="container">
     <div class="jumbotron">
-    <h1>Menu List</h1>
+    <h1>{{ restaurant.name }}</h1>
         </div>
   </div>
 
   <div class="container">
+    <h3>Menu List</h3>
     {% for m in menu %}
       <div class="row">
           <div class="col-md-6">{{m.name}}
-              <a href="{{ url_for('edit_menu', restaurant_id=restaurant_id, menu_id=m.id) }}" class="fa fa-pencil-square-o" aria-hidden="true"></a>
+              <a href="{{ url_for('edit_menu', restaurant_id=restaurant.id, menu_id=m.id) }}" style="padding-left:5em;" class="fa fa-pencil-square-o" aria-hidden="true"></a>
           </div>
       </div>
           {% endfor %}
