--- a/vagrant/itemCatalog/templates/menu_list.html
+++ b/vagrant/itemCatalog/templates/menu_list.html
@@ -30,13 +30,25 @@
     {% for m in menu %}
       <div class="row">
           <div class="col-md-6">{{m.name}}
+              <button class="fa fa-pencil-square-o edit-button" data-menu-id="{{ m.id }}"
+                      data-restaurant-id="{{ m.restaurant_id }}" aria-hidden="true"></button>
               <a href="{{ url_for('edit_menu', restaurant_id=restaurant.id, menu_id=m.id) }}" style="padding-left:5em;" class="fa fa-pencil-square-o" aria-hidden="true"></a>
           </div>
       </div>
           {% endfor %}
   </div>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <form id="edit-menu" method="post" class="form-horizontal" style="display: none;">
+      <div class="form-group">
+          <label class="col-xs-3 control-label">Name</label>
+          <div class="col-xs-3">
+              <input type="text" class="form-control" name="name"/>
+          </div>
+      </div>
+  </form>
+
+
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
@@ -45,7 +57,17 @@
 
   <script>
       $(document).ready(function () {
+          $('.edit-button').click(function () {
+              var menu_id = $(this).attr('data-menu-id');
+              var restaurant_id = $(this).attr('data-restaurant-id')
 
+              $.ajax({
+                  url: './' + menu_id + '/json/',
+                  method: 'GET'
+              }).success(function (response) {
+                  alert(response['MenuItem']['name']);
+              });
+          })
       });
   </script>
   </body>
