--- a/vagrant/itemCatalog/templates/menu_list.html
+++ b/vagrant/itemCatalog/templates/menu_list.html
@@ -41,11 +41,16 @@
   <form id="edit-menu" method="post" class="form-horizontal" style="display: none;">
       <div class="form-group">
           <label class="col-xs-3 control-label">Name</label>
-          <div class="col-xs-3">
+          <div class="col-xs-5">
               <input type="text" class="form-control" name="name"/>
           </div>
           <input type="text" style="display: none;" name="menu_id" />
           <input type="text" style="display: none;" name="restaurant_id"/>
+      </div>
+      <div class="form-group">
+          <div class="col-xs-3 col-xs-offset-9">
+              <button type="submit" class="btn btn-default">Update</button>
+          </div>
       </div>
   </form>
 
@@ -76,11 +81,14 @@
                       title: "Edit Menu Item",
                       message: $('#edit-menu'),
                       show: true
-                  }).on('hide.bs.modal', function(e) {
+                  }).on('shown.bs.modal', function () {
+                      $('#edit-menu')
+                              .show()// Show the form
+                  }).on('hide.bs.modal', function (e) {
                         // Bootbox will remove the modal (including the body which contains the login form)
                         // after hiding the modal
                         // Therefor, we need to backup the form
-                        $('#userForm').hide().appendTo('body');
+                      $('#edit-menu').hide().appendTo('body');
                     })
                     .modal('show');
 
