--- a/vagrant/itemCatalog/templates/menu_list.html
+++ b/vagrant/itemCatalog/templates/menu_list.html
@@ -32,13 +32,13 @@
           <div class="col-md-6">{{m.name}}
               <button class="fa fa-pencil-square-o edit-button" data-menu-id="{{ m.id }}"
                       data-restaurant-id="{{ m.restaurant_id }}" aria-hidden="true"></button>
-              <a href="{{ url_for('edit_menu', restaurant_id=restaurant.id, menu_id=m.id) }}" style="padding-left:5em;" class="fa fa-pencil-square-o" aria-hidden="true"></a>
           </div>
       </div>
           {% endfor %}
   </div>
 
-  <form id="edit-menu" method="post" class="form-horizontal" style="display: none;">
+  <form id="edit-menu" method="post" action="{{ url_for('edit_menu_item', restaurant_id=1, menu_id=1) }}"
+        class="form-horizontal" style="display: none;">
       <div class="form-group">
           <label class="col-xs-3 control-label">Name</label>
           <div class="col-xs-5">
@@ -83,7 +83,7 @@
                       show: true
                   }).on('shown.bs.modal', function () {
                       $('#edit-menu')
-                              .show()// Show the form
+                              .show() // Show the form
                   }).on('hide.bs.modal', function (e) {
                         // Bootbox will remove the modal (including the body which contains the login form)
                         // after hiding the modal
