--- a/vagrant/itemCatalog/templates/menu_list.html
+++ b/vagrant/itemCatalog/templates/menu_list.html
@@ -31,13 +31,13 @@
       <div class="row">
           <div class="col-md-6">{{m.name}}
               <button class="fa fa-pencil-square-o edit-button" data-menu-id="{{ m.id }}"
-                      data-restaurant-id="{{ m.restaurant_id }}" aria-hidden="true"></button>
+                      data-restaurant-id="{{ restaurant.id }}" aria-hidden="true"></button>
           </div>
       </div>
           {% endfor %}
   </div>
 
-  <form id="edit-menu" method="post" action="{{ url_for('edit_menu_item', restaurant_id=1, menu_id=1) }}"
+  <form id="edit-menu" method="post" action="{{ url_for('edit_menu_item', restaurant_id=restaurant.id) }}"
         class="form-horizontal" style="display: none;">
       <div class="form-group">
           <label class="col-xs-3 control-label">Name</label>
@@ -73,9 +73,9 @@
                   method: 'GET'
               }).success(function (response) {
                  $('#edit-menu')
-                         .find('[name="name"]').val(response['MenuItem']['name'])
-                         .find('[name="menu_id"]').val(response['MenuItem']['id'])
-                         .find('[name="restaurant_id"]').val(response['MenuItem']['restaurant_id']);
+                         .find('[name="name"]').val(response.MenuItem.name).end()
+                         .find('[name="menu_id"]').val(response.MenuItem.id).end()
+                         .find('[name="restaurant_id"]').val(response.MenuItem.restaurant_id).end();
 
                   bootbox.dialog({
                       title: "Edit Menu Item",
