--- a/vagrant/itemCatalog/templates/menu_list.html
+++ b/vagrant/itemCatalog/templates/menu_list.html
@@ -27,6 +27,13 @@
 
   <div class="container">
     <h3>Menu List</h3>
+      {% if not menu %}
+          <ul class="list-group">
+              <li class="list-group-item list-group-item-info">
+                  No menu items present.
+              </li>
+          </ul>
+      {% else %}
     {% for m in menu %}
       <div class="row">
           <div class="col-md-6">{{m.name}}
@@ -34,7 +41,8 @@
                       data-restaurant-id="{{ restaurant.id }}" aria-hidden="true"></button>
           </div>
       </div>
-          {% endfor %}
+    {% endfor %}
+      {% endif %}
   </div>
 
   <form id="edit-menu" method="post" action="{{ url_for('edit_menu_item', restaurant_id=restaurant.id) }}"
