--- a/vagrant/itemCatalog/templates/menu_list.html
+++ b/vagrant/itemCatalog/templates/menu_list.html
@@ -43,6 +43,11 @@
           </div>
           {% endfor %}
       {% endif %}
+      <div class="row">
+          <div class="col-md-3">
+              <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> Add new item
+          </div>
+      </div>
   </div>
 
   <form id="edit-menu" method="post" action="{{ url_for('edit_menu_item', restaurant_id=restaurant.id) }}"
