--- a/vagrant/itemCatalog/templates/menu_list.html
+++ b/vagrant/itemCatalog/templates/menu_list.html
@@ -50,7 +50,7 @@
       </div>
   </div>
 
-  <form id="edit-menu" method="post" action="{{ url_for('edit_menu_item', restaurant_id=restaurant.id) }}"
+  <form id="edit-menu-form" method="post" action="{{ url_for('edit_menu_item', restaurant_id=restaurant.id) }}"
         class="form-horizontal" style="display: none;">
       <div class="form-group">
           <label class="col-xs-3 control-label">Name</label>
@@ -85,26 +85,25 @@
                   url: './' + menu_id + '/json/',
                   method: 'GET'
               }).success(function (response) {
-                 $('#edit-menu')
+                 $('#edit-menu-form')
                          .find('[name="name"]').val(response.MenuItem.name).end()
                          .find('[name="menu_id"]').val(response.MenuItem.id).end()
                          .find('[name="restaurant_id"]').val(response.MenuItem.restaurant_id).end();
 
                   bootbox.dialog({
                       title: "Edit Menu Item",
-                      message: $('#edit-menu'),
-                      show: true
+                      message: $('#edit-menu-form'),
+                      show: true,
                   }).on('shown.bs.modal', function () {
-                      $('#edit-menu')
+                      $('#edit-menu-form')
                               .show() // Show the form
                   }).on('hide.bs.modal', function (e) {
                         // Bootbox will remove the modal (including the body which contains the login form)
                         // after hiding the modal
                         // Therefor, we need to backup the form
-                      $('#edit-menu').hide().appendTo('body');
+                      $('#edit-menu-form').hide().appendTo('body');
                     })
                     .modal('show');
-
               });
           })
       });
