--- a/vagrant/itemCatalog/templates/restaurants_list.html
+++ b/vagrant/itemCatalog/templates/restaurants_list.html
@@ -26,7 +26,7 @@
   </div>
 
   <div class="container">
-    {% if not restaurant %}
+    {% if not restaurants %}
         <ul class="list-group">
           <li class="list-group-item list-group-item-info">
               No restaurant present.
