--- a/vagrant/itemCatalog/templates/menu_list.html
+++ b/vagrant/itemCatalog/templates/menu_list.html
@@ -45,11 +45,38 @@
       {% endif %}
       <div class="row">
           <div class="col-md-3">
-              <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> Add new item
+              <button><span class="glyphicon glyphicon-plus-sign" id="add-new-item" aria-hidden="true"></span> Add new item</button>
           </div>
       </div>
   </div>
-
+  <!-- Create new item -->
+  <form id="create-new-form" method="post" action="{{ url_for('new_menu_item')}}" class="form-horizontal" style="display: none;">
+      <div class="form-group">
+          <label class="col-xs-3 control-label">Name: </label>
+          <div class="col-xs-5">
+              <input type="text" class="form-control" name="name" />
+          </div>
+      </div>
+      <div clas="form-group">
+          <label class="col-xs-3 control-label">Description: </label>
+          <div class="col-xs-9">
+              <input type="text" class="form-control" name="desc"/>
+          </div>
+      </div>
+      <div class="form-group">
+          <label class="col-xs-3 control-label">Course: </label>
+          <div class="col-xs-6">
+              <input type="text" class="form-control" name="course" />
+          </div>
+      </div>
+      <div class="form-group">
+          <label class="col-xs-3 control-label">Price: </label>
+          <div class="col-xs-3">
+              <input type="text" class="form-control" name="price" />
+          </div>
+      </div>
+  </form>
+  <!-- Edit menu item -->
   <form id="edit-menu-form" method="post" action="{{ url_for('edit_menu_item', restaurant_id=restaurant.id) }}"
         class="form-horizontal" style="display: none;">
       <div class="form-group">
