--- a/vagrant/itemCatalog/templates/menu_list.html
+++ b/vagrant/itemCatalog/templates/menu_list.html
@@ -50,7 +50,8 @@
       </div>
   </div>
   <!-- Create new item -->
-  <form id="create-new-form" method="post" action="{{ url_for('new_menu_item')}}" class="form-horizontal" style="display: none;">
+  <form id="create-new-form" method="post" action="{{ url_for('new_menu_item', restaurant_id=restaurant.id) }}"
+        class="form-horizontal" style="display: none;">
       <div class="form-group">
           <label class="col-xs-3 control-label">Name: </label>
           <div class="col-xs-5">
