--- a/vagrant/itemCatalog/templates/menu_list.html
+++ b/vagrant/itemCatalog/templates/menu_list.html
@@ -57,7 +57,7 @@
       <div class="form-group">
           <label class="col-xs-3 control-label">Name: </label>
           <div class="col-xs-5">
-              <input type="text" class="form-control" name="name" />
+              <input type="text" class="form-control" name="name" required />
           </div>
       </div>
       <div class="form-group">
