--- a/vagrant/itemCatalog/templates/menu_list.html
+++ b/vagrant/itemCatalog/templates/menu_list.html
@@ -47,11 +47,17 @@
           {% endfor %}
       {% endif %}
       <div class="row">
+          <br>
           <div class="col-md-3">
               <button id="add-new-item"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"
                                               data-restaurant-id="{{ restaurant.id }}"></span>
                   Add new item
               </button>
+          </div>
+      </div>
+      <div class="row">
+          <div class="col-md-12 text-center">
+              <a class="h5 btn btn-default" href="{{ url_for('home')}}">Back to Restaurants</a>
           </div>
       </div>
   </div>
