--- a/vagrant/itemCatalog/templates/menu_list.html
+++ b/vagrant/itemCatalog/templates/menu_list.html
@@ -38,7 +38,7 @@
               <div class="row">
                   <div class="col-md-6">{{ m.name }}
                       <button class="edit-button fa fa-pencil-square-o btn btn-default" data-menu-id="{{ m.id }}"
-                              data-restaurant-id="{{ restaurant.id }}" aria-hidden="true"></button>
+                              data-restaurant-id="{{ restaurant.id }}" ></button>
                       <a class="delete-button glyphicon glyphicon-trash btn btn-default"
                               href="{{ url_for('delete_menu_item', restaurant_id=restaurant.id, menu_id=m.id) }}" >
                       </a>
@@ -49,7 +49,7 @@
       <div class="row">
           <br>
           <div class="col-md-3">
-              <button id="add-new-item"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"
+              <button id="add-new-item"><span class="glyphicon glyphicon-plus-sign"
                                               data-restaurant-id="{{ restaurant.id }}"></span>
                   Add new item
               </button>
