--- a/vagrant/itemCatalog/templates/restaurants_list.html
+++ b/vagrant/itemCatalog/templates/restaurants_list.html
@@ -38,6 +38,7 @@
               <div class="col-md-6">
                   <a  href="{{ url_for('menu', restaurant_id=r.id) }}">{{r.name}}</a>
                   <button href="{{ url_for('edit_restaurant', restaurant_id=r.id) }}" data-restaurant-id="{{ r.id }}" class="edit-restaurant fa fa-pencil-square-o"></button>
+                  <button href="{{ url_for('delete_restaurant', restaurant_id=r.id) }}" class="glyphicon glyphicon-trash"></button>
               </div>
           </div>
         {% endfor %}
