--- a/vagrant/itemCatalog/templates/restaurants_list.html
+++ b/vagrant/itemCatalog/templates/restaurants_list.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,166 +9,197 @@
 
     <!-- Bootstrap -->
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
-      <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel='stylesheet'>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel='stylesheet'>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
-  <body>
+</head>
+<body>
 
-  <div class="container">
+<div class="container">
     <div class="jumbotron">
-    <h1> Restaurant List</h1>
-        </div>
-  </div>
+        <h1> Restaurant List</h1>
+    </div>
+</div>
 
-  <div class="container">
-      <button id='modal-on'>
-      </button>
+<div class="container">
+    <button id='modal-on'>
+    </button>
     {% if not restaurants %}
         <ul class="list-group">
-          <li class="list-group-item list-group-item-info">
-              No restaurant present.
-          </li>
+            <li class="list-group-item list-group-item-info">
+                No restaurant present.
+            </li>
         </ul>
     {% else %}
         {% for r in restaurants %}
-          <div class="row">
-              <div class="col-md-6">
-                  <a  href="{{ url_for('menu', restaurant_id=r.id) }}">{{r.name}}</a>
-                  <button href="{{ url_for('edit_restaurant', restaurant_id=r.id) }}" data-restaurant-id="{{ r.id }}" class="edit-restaurant fa fa-pencil-square-o"></button>
-                  <button action="{{ url_for('delete_restaurant', restaurant_id=r.id) }}"
-                          class="delete-restaurant glyphicon glyphicon-trash"></button>
-              </div>
-          </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <a href="{{ url_for('menu', restaurant_id=r.id) }}">{{ r.name }}</a>
+                    <button href="{{ url_for('edit_restaurant', restaurant_id=r.id) }}" data-restaurant-id="{{ r.id }}"
+                            class="edit-restaurant fa fa-pencil-square-o"></button>
+                    <button data-restaurant-id="{{ r.id }}"
+                            class="delete-restaurant glyphicon glyphicon-trash"></button>
+                </div>
+            </div>
         {% endfor %}
     {% endif %}
-      <div class="row">
-          <div class="col-md-3">
-                <button class="btn btn-default" id="add-new">Add new restaurant</button>
-          </div>
-      </div>
-  </div>
-
-  <div id="delete-modal" style="display: none;">
-      <div id="delete-form"></div>
-  </div>
+    <div class="row">
+        <div class="col-md-3">
+            <button class="btn btn-default" id="add-new">Add new restaurant</button>
+        </div>
+    </div>
+</div>
 
 
-  <div id="ex-modal" style="display: none;">
-      <div id="ex-form"></div>
-  </div>
+<div id="ex-modal" style="display: none;">
+    <div id="ex-form"></div>
+</div>
 
 
-  <form id="add-new-form" class="form-horizontal" method="post" action="{{ url_for('new_restaurant') }}" style="display: none;">
-      <div class="form-group">
-          <div class="col-xs-3 control-label">Name</div>
-          <div class="col-xs-5">
-              <input type="text" class="form-control" name="name" />
-          </div>
-      </div>
-      <div class="form-group">
-          <div class="col-xs-3 col-xs-offset-9">
-              <button type="submit" class="btn btn-default">Submit</button>
-          </div>
-      </div>
-  </form>
+<form id="add-new-form" class="form-horizontal" method="post" action="{{ url_for('new_restaurant') }}"
+      style="display: none;">
+    <div class="form-group">
+        <div class="col-xs-3 control-label">Name</div>
+        <div class="col-xs-5">
+            <input type="text" class="form-control" name="name"/>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-xs-3 col-xs-offset-9">
+            <button type="submit" class="btn btn-default">Submit</button>
+        </div>
+    </div>
+</form>
 
-  <form id="edit-restaurant-form" method="post"  action="{{ url_for('edit_restaurant') }}"
-        class="form-horizontal" style="display: none;">
-      <div class="form-group">
-          <label class="col-xs-3 control-label">Name</label>
-          <div class="col-xs-5">
-              <input type="text" style="display: none;" name="id" />
-              <input type="text" class="form-control" name="name"/>
-          </div>
-      </div>
-      <div class="form-group">
-          <div class="col-xs-3 col-xs-offset-9">
-              <button type="submit" class="btn btn-default">Update</button>
-          </div>
-      </div>
-  </form>
+<form id="edit-restaurant-form" method="post" action="{{ url_for('edit_restaurant') }}"
+      class="form-horizontal" style="display: none;">
+    <div class="form-group">
+        <label class="col-xs-3 control-label">Name</label>
+        <div class="col-xs-5">
+            <input type="text" style="display: none;" name="id"/>
+            <input type="text" class="form-control" name="name"/>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-xs-3 col-xs-offset-9">
+            <button type="submit" class="btn btn-default">Update</button>
+        </div>
+    </div>
+</form>
 
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
-    <script src ="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js"></script>
-  <script type="text/javascript"
-          src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.0/handlebars.min.js"></script>
-  <!-- alpaca -->
-  <link type="text/css" href="//code.cloudcms.com/alpaca/1.5.18/bootstrap/alpaca.min.css" rel="stylesheet"/>
-  <script type="text/javascript" src="//code.cloudcms.com/alpaca/1.5.18/bootstrap/alpaca.min.js"></script>
-  <script>
-      $(document).ready( function () {
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js"></script>
+<script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.0/handlebars.min.js"></script>
+<!-- alpaca -->
+<link type="text/css" href="//code.cloudcms.com/alpaca/1.5.18/bootstrap/alpaca.min.css" rel="stylesheet"/>
+<script type="text/javascript" src="//code.cloudcms.com/alpaca/1.5.18/bootstrap/alpaca.min.js"></script>
+<!-- jquery confirm -->
+<link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/2.5.1/jquery-confirm.min.css"
+      rel="stylesheet"/>
+<script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/2.5.1/jquery-confirm.min.js"></script>
+<!-- toastr -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.js"></script>
+<link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.css" rel="stylesheet"/>
+<script>
+    $(document).ready(function () {
+
+        toastr.options = {
+            closeButton: false,
+            debug: false,
+            "newestOnTop": false,
+            "progressBar": false,
+            "positionClass": "toast-bottom-right",
+            "preventDuplicates": false,
+            "onclick": null,
+            "showDuration": "300",
+            "hideDuration": "1000",
+            "timeOut": "5000",
+            "extendedTimeOut": "1000",
+            "showEasing": "swing",
+            "hideEasing": "linear",
+            "showMethod": "fadeIn",
+            "hideMethod": "fadeOut"
+        };
+
+
         $('.edit-restaurant').click(function () {
             var restaurant_id = $(this).attr('data-restaurant-id');
             bootbox.dialog({
                 title: "Edit Restaurant Name",
                 message: $('#edit-restaurant-form'),
                 show: true
-            }).on('shown.bs.modal', function (){
+            }).on('shown.bs.modal', function () {
                 $('#edit-restaurant-form')
                         .show()
                         .find('[name="id"]').val(restaurant_id).end();
-            }).on('hide.bs.modal', function (){
+            }).on('hide.bs.modal', function () {
                 $('#edit-restaurant-form').hide().appendTo('body');
             }).modal('show');
 
         });
 
-          $('.delete-restaurant').click(function () {
+        $('.delete-restaurant').click(function () {
+            var restaurant = $(this).attr('data-restaurant-id');
+            $.confirm({
+                title: 'Delete Confirmation',
+                content: 'Are you sure you wish to delete?',
+                theme: 'material',
+                confirm: function () {
+                    $.ajax({
+                        url: '/restaurants/' + restaurant + '/delete/',
+                        method: 'POST'
+                    }).success(function (response) {
+                        window.location.reload();
+                        toastr.success('Restaurant Deleted');
 
-              bootbox.dialog({
-                  title: "Delete Restaurant",
-                  message: $('#delete-restaurant'),
-                  show: true
-              }).on('shown.bs.modal', function () {
-                  $('#delete-modal').show();
-                  $('#delete-modal').alpaca({
-                      'data': 'test',
-                      'schema': {
-                          'enum': ['yes', 'no']
-                      }
-                  })
-              }).modal('show');
-          });
-
-          $('#modal-on').click(function () {
-              bootbox.dialog({
-                  title: "Alpaca Example",
-                  message: $('#ex-form'),
-                  show: true
-              }).on('shown.bs.modal', function () {
-                  $('#ex-modal').show();
-                  $('#ex-form').alpaca({
-                      'data': 'test',
-                      'schema': {
-                          'enum': ['yes', 'no']
-                      }
-                  });
-              }).modal('show');
-          });
-
-        $('#add-new').click(function () {
-           bootbox.dialog({
-               title: 'Add New Restaurant',
-               message: $('#add-new-form'),
-               show: true,
-           }).on('shown.bs.modal', function () {
-              $('#add-new-form').show();
-             }).on('hide.bs.modal', function () {
-              $('#add-new-form').hide().appendTo('body');
-             })
-            .modal('show');
+                    });
+                },
+                cancel: function () {
+                    toastr.info('Delete Cancelled');
+                }
+            })
         });
 
-      });
-  </script>
-  </body>
+        $('#modal-on').click(function () {
+            bootbox.dialog({
+                title: "Alpaca Example",
+                message: $('#ex-form'),
+                show: true
+            }).on('shown.bs.modal', function () {
+                $('#ex-modal').show();
+                $('#ex-form').alpaca({
+                    'data': 'test',
+                    'schema': {
+                        'enum': ['yes', 'no']
+                    }
+                });
+            }).modal('show');
+        });
+
+        $('#add-new').click(function () {
+            bootbox.dialog({
+                title: 'Add New Restaurant',
+                message: $('#add-new-form'),
+                show: true,
+            }).on('shown.bs.modal', function () {
+                $('#add-new-form').show();
+            }).on('hide.bs.modal', function () {
+                $('#add-new-form').hide().appendTo('body');
+            })
+                    .modal('show');
+        });
+
+    });
+</script>
+</body>
 </html>
