--- a/vagrant/itemCatalog/templates/restaurants_list.html
+++ b/vagrant/itemCatalog/templates/restaurants_list.html
@@ -115,6 +115,15 @@
 <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.css" rel="stylesheet"/>
 <script>
     $(document).ready(function () {
+        if (localStorage.getItem('result')) {
+            switch (localStorage.getItem('result')) {
+                case 'success':
+                    toastr.success(localStorage.getItem('message'));
+                    break;
+
+            }
+            localStorage.clear();
+        }
 
         toastr.options = {
             closeButton: false,
@@ -162,8 +171,9 @@
                         url: '/restaurants/' + restaurant + '/delete/',
                         type: 'POST',
                         success: function () {
+                            localStorage.setItem('result', 'success');
+                            localStorage.setItem('message', 'Restaurant Deleted');
                             location.reload();
-                            toastr.success('Restaurant Deleted');
                         }
 
                     });
@@ -208,8 +218,9 @@
                         data: $('#add-res').serialize(),
 
                         success: function (result) {
+                            localStorage.setItem('result', 'success');
+                            localStorage.setItem('message', 'Added new Restaurant');
                             location.reload();
-                            toastr.success('Added new Restaurant');
                         }
                     });
                 },
