Feat: Added a simple react component

--- a/vagrant/itemCatalog/templates/menu_list.html
+++ b/vagrant/itemCatalog/templates/menu_list.html
@@ -137,6 +137,11 @@
 
   <script>
       $(document).ready(function () {
+          class MenuList extends React.Component {
+              render() {
+                  return ('');
+              }
+          }
           $('.edit-button').click(function () {
               var menu_id = $(this).attr('data-menu-id');
               var restaurant_id = $(this).attr('data-restaurant-id');
